ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/UsedVehicleProductCode__c.field-meta.xml
<CustomField>
    <fullName>UsedVehicleProductCode__c</fullName>
    <label>Used Vehicle Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RLY</fullName>
            </value>
            <value>
                <fullName>RLN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>