ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Vehicle_SubType__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_SubType__c</fullName>
    <label>Vehicle SubType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tractor</fullName>
            </value>
            <value>
                <fullName>Implement</fullName>
            </value>
            <value>
                <fullName>Harvester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>