ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Verification_charges__c.field-meta.xml
<CustomField>
    <fullName>Verification_charges__c</fullName>
    <label>Verification charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>