ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/validationRules/Customer_Type_Required_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Type_Required_Rule</fullName>
    <active>true</active>
    <description>This validation rule is applicable when the Scheme will be created with product type Tractor and customer type blank.</description>
    <errorConditionFormula>AND(ISPICKVAL(Product__c, &apos;Tractor&apos;), ISNULL(Customer_Type__c))</errorConditionFormula>
    <errorDisplayField>Customer_Type__c</errorDisplayField>
    <errorMessage>Customer Type cannot be blank for tractor product</errorMessage>
</ValidationRule>