ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/validationRules/DealerIncentiveAmountSubDealer_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>DealerIncentiveAmountSubDealer_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Dealer_incentive_amount_sub_dealer__c ) ) , NOT( ISNULL( Dealer_incentive_amount_sub_dealer_p__c ) ), ISNULL( Payout_Cap__c ), ISPICKVAL(Product__c, &apos;Two Wheeler&apos;))</errorConditionFormula>
    <errorDisplayField>Dealer_incentive_amount_sub_dealer__c</errorDisplayField>
    <errorMessage>Please enter either Incentive % or amt and not both in scheme</errorMessage>
</ValidationRule>