ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/validationRules/DSM_Incentive1_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>DSM_Incentive1_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  DSM_Incentive1__c ) ) , NOT( ISNULL(  DSM_Incentive1_p__c ) ), ISNULL( Payout_Cap__c ),ISPICKVAL(Product__c, &apos;Two Wheeler&apos;))</errorConditionFormula>
    <errorDisplayField>DSM_Incentive1__c</errorDisplayField>
    <errorMessage>Please enter either Incentive % or amt and not both in scheme</errorMessage>
</ValidationRule>