ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/validationRules/GiftThroughDealerAmount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>GiftThroughDealerAmount_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Gift_through_dealer_amount__c ) ) , NOT( ISNULL(  Gift_through_dealer_amount_p__c ) ), ISNULL( Payout_Cap__c ), ISPICKVAL(Product__c, &apos;Two Wheeler&apos;))</errorConditionFormula>
    <errorDisplayField>Gift_through_dealer_amount__c</errorDisplayField>
    <errorMessage>Please enter either Gift through dealer Amount % or amt and not both in scheme</errorMessage>
</ValidationRule>