ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/validationRules/MfrIncentive_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>MfrIncentive_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Mfr_incentive__c  ) ) , NOT( ISNULL(  Mfr_incentive_p__c )), ISPICKVAL(Product__c, &apos;Two Wheeler&apos;) )</errorConditionFormula>
    <errorDisplayField>Mfr_incentive__c</errorDisplayField>
    <errorMessage>Please enter either Incentive % or amt and not both in scheme</errorMessage>
</ValidationRule>