ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/validationRules/PayoutCap_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>PayoutCap_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNULL( Payout_Cap__c )), ISPICKVAL(Product__c, &apos;Two Wheeler&apos;), OR( ISNULL(Dealer_incentive_amount_main_dealer__c) , ISNULL(Dealer_incentive_amount_main_dealer_p__c), ISNULL( Dealer_incentive_amount_sub_dealer__c ) , ISNULL( Dealer_incentive_amount_sub_dealer_p__c ),ISNULL( Gift_through_dealer_amount__c ) , ISNULL( Gift_through_dealer_amount_p__c ), ISNULL( DSM_Incentive1__c) , ISNULL( DSM_Incentive1_p__c ),ISNULL( DSM_Incentive2__c )  , ISNULL( DSM_Incentive2_p__c )))</errorConditionFormula>
    <errorMessage>Please fill Dealer incentive amount - main dealer and %, Dealer incentive amount - sub dealer and %, Gift through dealer amount and %, DSM Incentive1 and %, DSM Incentive2 and %</errorMessage>
</ValidationRule>