ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Scheme_Code__c</columns>
    <columns>Products__c</columns>
    <columns>Scheme_Expiry__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Imputed_IRR_for_Low_IRR_Scheme__c</columns>
    <columns>Low_IRR_Scheme__c</columns>
    <columns>Payout_Cap__c</columns>
    <columns>RiskBand__c</columns>
    <columns>Loan_Amount_Min__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Two Wheeler</value>
    </filters>
    <label>All</label>
</ListView>